feat: update swagger documentation
